--- a/server/package.json
+++ b/server/package.json
@@ -4,12 +4,15 @@
   "description": "A web video-chat app server",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon ./src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "format": "prettier --write \"./src/**/*.{js, ts}\""
+    "format": "prettier --write \"./src/**/*.{js, npmts}\""
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.17",
+    "@types/node": "^18.15.12",
     "nodemon": "^2.0.22",
     "prettier": "^2.8.7",
     "ts-node": "^10.9.1"
